src/objects/pca__Email_Integration__c.object
<CustomObject>
    <fields>
        <fullName>pca__Email_Field__c</fullName>
        <label>Email Field</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Setting__c</fullName>
        <label>Setting</label>
        <referenceTo>pca__Setting__c</referenceTo>
        <relationshipLabel>Email Integrations</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pca__Validation_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. We can populate this field for you with the validation state of the email address. Specifying this field and adding it into a validation rule allows you to force users to enter validated addresses.</inlineHelpText>
        <label>Validation Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Email Integration</label>
    <nameField>
        <label>Email Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>